bulk of vehicles done, delete character, & more

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -168,3 +168,20 @@ body {
     -o-user-drag: none;
     pointer-events: none;
 }
+/* width */
+::-webkit-scrollbar {
+    transition: all 0.2s ease-in-out;
+    width: 6px;
+    border-radius: 8px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: var(--text-secondary);
+    border-radius: 8px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: var(--text);
+}
